--- a/7 Regression Project/project.ipynb
+++ b/7 Regression Project/project.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1 Data Ingestion"
+    "###  Data Ingestion"
    ]
   },
   {
@@ -715,13 +715,6 @@
    ],
    "source": [
     "Y.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 4 - Feature Selection"
    ]
   },
   {
@@ -1553,7 +1546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 5 - Apply final preprocessing on X_sel"
+    "###  Apply final preprocessing on X_sel"
    ]
   },
   {
@@ -1934,7 +1927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 6 - Apply Train test split"
+    "###   Apply Train test split"
    ]
   },
   {
@@ -2609,7 +2602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 7 - Model Building\n",
+    "###  Model Building\n",
     "LinearRegression\n",
     "\n",
     "Ridge"
@@ -4198,7 +4191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 8 - Model evaluation"
+    "### Model evaluation"
    ]
   },
   {
@@ -4282,7 +4275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 9 - Out of Sample prediction"
+    "###  Out of Sample prediction"
    ]
   },
   {
